Bug#46113 ndbd fails to start when built with gcc-4.4.0 (e.g Fedora 11)  - Add macro for checking that type T does have a user defined constructor.  - Use macro in DLList.hpp, DLFifoList.hpp and DLHashTable.hpp  - Add empty constructors to the structs that are put in the above lists    (that the compiler now detects if using -std=c++0x)